base/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: forgejo
  namespace: forgejo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: forgejo
  template:
    metadata:
      labels:
        app: forgejo
    spec:
      containers:
      - name: forgejo
        image: codeberg.org/forgejo/forgejo:latest # Use a specific tag in production
        ports:
        - containerPort: 3000
        volumeMounts:
        - name: forgejo-data
          mountPath: /data
      volumes:
      - name: forgejo-data
        persistentVolumeClaim:
          claimName: forgejo-data
