base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: forgejo
  namespace: forgejo
spec:
  selector:
    app: forgejo
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
