base/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: forgejo-ingress
  namespace: forgejo
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "web, websecure"
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  tls:
  - hosts:
    - git.o-0.zip
    secretName: forgejo-tls-secret
  rules:
  - host: git.o-0.zip
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: forgejo
            port:
              number: 3000
